# hpp_benchmark

./: CMakeLists.txt  README.md  notes.md
2016-06-03/: README  commit
2016-06-03/baxter-manipulation-boxes/: benchmark
2016-06-03/hrp2-on-the-ground/: benchmark  script.py
2016-06-03/pr2-in-iai-kitchen/: benchmark  script.py
2016-06-03/pr2-manipulation-kitchen/: benchmark  benchmark-1  script.py
2016-06-03/pr2-manipulation-two-hand/: script.py
2016-06-04/: README  commit
2016-06-04/baxter-manipulation-boxes/: benchmark  script.py
2016-06-04/hrp2-on-the-ground/: benchmark
2016-06-04/pr2-in-iai-kitchen/: benchmark
2016-06-04/pr2-manipulation-kitchen/: benchmark
2016-06-04/pr2-manipulation-two-hand/: benchmark  script.py
2016-07-01/: README  commit
2016-07-01/baxter-manipulation-boxes/: benchmark  script.py
2016-07-01/hrp2-on-the-ground/: benchmark  script.py
2016-07-01/pr2-in-iai-kitchen/: benchmark  script.py
2016-07-01/pr2-manipulation-kitchen/: benchmark  script.py
2016-07-01/pr2-manipulation-two-hand/: benchmark
2016-08-19/: README  commit
2016-08-19/baxter-manipulation-boxes/: benchmark  benchmark_two_arms_with_rules  script.py
2016-08-19/hrp2-on-the-ground/: benchmark  script.py
2016-08-19/pr2-in-iai-kitchen/: collision_timings.py  random_configuration.pickle  results_collision_timings  script.py
2016-08-19/pr2-manipulation-kitchen/: script.py
2016-08-19/pr2-manipulation-two-hand/: benchmark  script.py
2016-08-20/: README  commit
2016-08-20/baxter-manipulation-boxes-easy/: benchmark  script.py
2016-08-29/: README  commit
2016-08-29/baxter-two-arms-one-box/: baxter_table_multiple_boxes.py  benchmark.inverted  benchmark.monotone  results.inverted.pickle  results.monotone.pickle
2016-08-29/baxter-two-arms-three-boxes/: autobuild.py  benchmark  results.pickle
2016-08-29/baxter-two-arms-two-boxes/: autobuild.py  benchmark  results.pickle
2016-11-18/baxter-manipulation-boxes/: benchmark
2016-11-18/hrp2-on-the-ground/: script.py
2016-11-18/pr2-in-iai-kitchen/: benchmark
2016-11-18/pr2-manipulation-kitchen/: benchmark
2016-11-19/: README
2016-11-19/baxter-manipulation-boxes/: script.py
2016-11-19/hrp2-on-the-ground/: benchmark  script.py
2016-11-19/pr2-in-iai-kitchen/: benchmark  script.py
2016-11-19/pr2-manipulation-kitchen/: script.py
2016-11-19/pr2-manipulation-two-hand/: script.py
2017-01-23/: commit
2017-01-23/baxter-manipulation-boxes/: benchmark  script.py
2017-01-23/hrp2-on-the-ground/: benchmark  script.py
2017-01-23/pr2-in-iai-kitchen/: benchmark  tmp.py
2017-01-23/pr2-manipulation-kitchen/: script.py
2017-01-23/pr2-manipulation-two-hand/: benchmark  script.py
2017-02-02/: README  benchmark  commit
2017-02-02/baxter-manipulation-boxes/: benchmark
2017-02-02/hrp2-on-the-ground/: benchmark
2017-02-02/pr2-in-iai-kitchen/: benchmark
2017-02-02/pr2-manipulation-kitchen/: benchmark
2017-02-02/pr2-manipulation-two-hand/: benchmark  script.py
2017-07-20/: README  commit
2017-07-20/baxter-manipulation-boxes/: benchmark  script.py
2017-07-20/hrp2-on-the-ground/: benchmark
2017-07-20/pr2-in-iai-kitchen/: benchmark
2017-07-20/pr2-manipulation-kitchen/: benchmark  script.py
2017-07-20/pr2-manipulation-two-hand/: benchmark  script.py
2017-07-20/ur5-spline-optimization/: benchmark  script.py
2017-09-14/: README  commit
2017-09-14/baxter-manipulation-boxes/: benchmark  script.py
2017-09-14/hrp2-on-the-ground/: benchmark  script.py
2017-09-14/pr2-in-iai-kitchen/: benchmark  script.py
2017-09-14/pr2-manipulation-kitchen/: benchmark  script.py
2017-09-14/pr2-manipulation-two-hand/: benchmark  script.py
2017-11-11/: README  commit
2017-11-11/baxter-manipulation-boxes/: benchmark  script.py
2017-11-11/hrp2-on-the-ground/: benchmark
2017-11-11/pr2-in-iai-kitchen/: benchmark
2017-11-11/pr2-manipulation-kitchen/: benchmark  script.py
2017-11-11/pr2-manipulation-two-hand/: benchmark  script.py
2017-12-26/: README  commit
2017-12-26/baxter-manipulation-boxes/: benchmark
2017-12-26/hrp2-on-the-ground/: benchmark  script.py
2017-12-26/pr2-in-iai-kitchen/: benchmark
2017-12-26/pr2-manipulation-kitchen/: benchmark
2017-12-26/pr2-manipulation-two-hand/: benchmark  script.py
2018-03-07/: README  commit  cpuinfo
2018-03-07/baxter-manipulation-boxes/: benchmark
2018-03-07/construction-set/: benchmark  visibility_prm.py
2018-03-07/hrp2-on-the-ground/: benchmark
2018-03-07/pr2-in-iai-kitchen/: benchmark
2018-03-07/pr2-manipulation-kitchen/: benchmark
2018-03-07/pr2-manipulation-two-hand/: benchmark
2018-03-07/romeo-placard/: benchmark  script.py
2018-05-15/: README  commit
2018-05-15/baxter-manipulation-boxes/: benchmark
2018-05-15/construction-set/: benchmark  script.py
2018-05-15/hrp2-on-the-ground/: benchmark
2018-05-15/pr2-in-iai-kitchen/: benchmark
2018-05-15/pr2-manipulation-kitchen/: benchmark
2018-05-15/pr2-manipulation-two-hand/: benchmark
2018-05-15/romeo-placard/: benchmark
2018-05-22/: README  commit
2018-05-22/baxter-manipulation-boxes/: benchmark
2018-09-28/: README  commit  cpuinfo  meminfo
2019-03-13/: commit  cpuinfo  meminfo
2019-04-05/: commit  cpuinfo  meminfo
2019-04-12/: commit
2019-05-30/: commit  cpuinfo  meminfo
2019-09-06/: commit  cpuinfo  meminfo
2019-09-13/: commit  meminfo
2019-12-09/: README  commit  cpuinfo  meminfo
2020-03-12/: README  cpuinfo  meminfo
2020-04-09/: README  commit
2020-04-10/: README  commit
2020-04-11/: README  commit
2020-05-08/: commit  cpuinfo  meminfo
doc/: Doxyfile.extra.in  mainpage.dox
future/: cpuinfo
script/: convert_benchmark_results.py  generate_benchmark_plot.py  generate_random_configuration.py  parse_and_generate_benchmark_plots.py  parse_and_generate_cpp_benchmark_plots.py  parse_and_generate_python_benchmark_plots.py  parse_benchmark.py  push.py  update.py
src/: CMakeLists.txt  benchmark.cc  benchmark.hh  hrp2-on-the-ground.cc  pr2-in-iai-kitchen.cc  romeo-placard.cc
urdf/: obstacle_easy.urdf  obstacle_medium.urdf
(+152 files in other folders)
